# -atabase_Lab2

./: CMakeLists.txt  Database.cpp  Database.h  FileManager.cpp  FileManager.h  GUI.cpp  GUI.h  LaboratoryReport.docx  main.cpp
